@@ -24,7 +24,7 @@ class TestValueError(ValueError):
 class Test(JSONRPC):
 
     FAILURE = 666
-    NOT_FOUND = 23
+    NOT_FOUND = jsonrpclib.METHOD_NOT_FOUND
     SESSION_EXPIRED = 42
 
     addSlash = True
@@ -117,7 +117,7 @@ class JSONRPCTestCase(unittest.TestCase):
     def testErrors(self):
         dl = []
         for code, methodName in [(666, "fail"), (666, "deferFail"),
-                                 (12, "fault"), (23, "noSuchMethod"),
+                                 (12, "fault"), (-32601, "noSuchMethod"),
                                  (17, "deferFault"), (42, "SESSION_TEST")]:
             d = self.proxy().callRemote(methodName)
             d = self.assertFailure(d, jsonrpclib.Fault)
