@@ -15,6 +15,8 @@ between the three JSON-RPC implementations.
 * Added a BaseProxy class.
 * Import cleanup.
 * Moved more common methods into the base query factory class.
+* Created a BaseSubhandler subclass for http and netstring RPC classes.
+* Removed session code from netstring RPC test.
 
 2009.11.20
 
